- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    5.0.0 Beta 1
 - 
    Windows 7, 64bit, msvc 2010
 
- 
        333f641622c795a4b826d2d48aeabd5b5eab6e90
 
If there is QAxWidget included in a modal dialog, the dialog itself acts like there is another modal dialog launched by it, i.e. it just emits warning noise when clicked.
Reproducable with the simple ActiveQt example control, but doesn't happen for all QAxWidgets; e.g. the standard IE control in a modal dialog works just fine.
- is required for
 - 
                    
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-         
 - Closed
 
 -         
 
- relates to
 - 
                    
QTBUG-18099 When a modal dialog is shown via an ActiveQt control then it is not modal to the container
-         
 - Closed
 
 -         
 - 
                    
QTBUG-43252 [Windows] QWindow::mapToGlobal() provides the wrong result if the window is embedded in a native window which also has a parent
-         
 - Closed
 
 -         
 
| For Gerrit Dashboard: QTBUG-26871 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 33007,2 | Fix in-process QAxServers inside modal windows. | master | qt/qtbase | Status: MERGED | +2 | 0 |